--- a/Rainbow.WebMvc/Rainbow.WebMvc/Rainbow.WebMvc.csproj
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Rainbow.WebMvc.csproj
@@ -259,10 +259,12 @@
     <Content Include="Content\Site\_kenburns.effect.less" />
     <None Include="Properties\PublishProfiles\Rainbow.pubxml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
+    <Content Include="Images\drawing.jpg" />
     <Content Include="Images\hand_blue.png" />
     <Content Include="Images\hand_green.png" />
     <Content Include="Images\hand_orange.png" />
     <Content Include="Images\hand_yellow.png" />
+    <Content Include="Images\kids-group.jpg" />
     <Content Include="robots.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
