--- a/Rainbow.WebMvc/Rainbow.WebMvc/Web.config
+++ b/Rainbow.WebMvc/Rainbow.WebMvc/Web.config
@@ -6,10 +6,10 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Rainbow.WebMvc-20141005143545;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Rainbow.WebMvc-20141005143545.mdf" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Rainbow.WebMvc-20141005143545;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Rainbow.WebMvc-20141005143545.mdf" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -61,6 +61,7 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
+    <trust level="Full" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
