--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "angular": "~1.3.12",
+    "angular-ui-router": "~0.2.13",
     "toastr": "~2.0.3",
     "bootstrap": "~3.3.2",
     "moment": "~2.9.0",
