--- a/bower.json
+++ b/bower.json
@@ -1,27 +1,33 @@
 {
-    "name": "Rainbow Day Nursery",
-    "version": "0.4.0",
-    "description": "Daycare website done in AngularJS",
-    "authors": [
-        "Jon Kroeker"
-    ],
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "angular": "~1.3.12",
-        "angular-ui-router": "~0.2.13",
-        "toastr": "~2.0.3",
-        "bootstrap": "~3.3.2",
-        "moment": "~2.9.0",
-        "font-awesome": "~4.3.0",
-        "underscore": "~1.7.0"
-    },
-    "devDependencies": {
-    }
+  "name": "Rainbow Day Nursery",
+  "version": "0.1.0",
+  "homepage": "https://github.com/flyer1/Rainbow",
+  "authors": [
+    "Jon Kroeker"
+  ],
+  "description": "Daycare website done in AngularJS",
+  "moduleType": [
+    "node"
+  ],
+  "keywords": [
+    "Angular"
+  ],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "src/client/lib",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular-ui-router": "~0.2.13",
+    "jquery": ">=1.6.3",
+    "bootstrap": "~3.3.2",
+    "moment": "~2.9.0",
+    "font-awesome": "~4.3.0",
+    "toastr": "~2.0.3",
+    "underscore": "~1.7.0"
+  }
 }
