--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-less": "^3.0.0",
-    "gulp-load-plugins": "^0.8.0"
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-uglify": "^1.1.0"
   }
 }
