--- a/package.json
+++ b/package.json
@@ -25,29 +25,13 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-less": "^2.0.1",
     "gulp-load-plugins": "^0.7.1",
+    "gulp-minify-css": "^0.3.0", 
+    "gulp-minify-html": "^0.1.7", 
     "gulp-plumber": "^0.6.6",
-    "gulp-uglify": "^1.0.1",
-    "gulp-concat": "^2.4.3",
-    "gulp-csso": "^0.2.9",
-    "gulp-filter": "^1.0.2",
-    "gulp-header": "^1.2.2",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^1.0.1",
-    "gulp-inject": "^1.0.1",
-    "gulp-jscs": "^1.1.2",
-    "gulp-jshint": "^1.7.1",
-    "gulp-minify-html": "^0.1.7",
-    "gulp-ng-annotate": "^0.3.2",
-    "gulp-nodemon": "^1.0.5",
-    "gulp-order": "^1.1.1",
     "gulp-print": "^1.1.0",
-    "gulp-rev": "^1.1.0",
-    "gulp-rev-replace": "^0.3.1",
-    "gulp-sourcemaps": "^1.3.0",
     "gulp-task-listing": "^1.0.0",
-    "gulp-useref": "^1.0.2",
+    "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
