--- a/bower.json
+++ b/bower.json
@@ -23,14 +23,18 @@
   ],
   "dependencies": {
     "angular-ui-router": "~0.2.13",
-    "jquery": ">=1.6.3",
-    "bootstrap": "~3.3.2",
     "moment": "~2.9.0",
     "font-awesome": "~4.3.0",
     "toastr": "~2.0.3",
     "underscore": "~1.7.0",
     "es5-shim": "~4.1.0",
     "ng-parallax": "~0.1.8",
-    "angular-scroll": "~0.6.5"
+    "angular-scroll": "~0.6.5",
+    "angular-bootstrap": "~0.12.1",
+    "angular": "~1.3.14",
+    "bootstrap": "~3.3.2"
+  },
+  "resolutions": {
+    "angular": ">=1 <1.3.0"
   }
 }
