--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "angular-scroll": "~0.6.5",
     "angular-bootstrap": "~0.12.1",
     "angular": "~1.3.14",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "angular-animate": "~1.3.14"
   },
   "resolutions": {
     "angular": ">=1 <1.3.0"
