--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-csso": "^1.0.0",
+    "gulp-filter": "^2.0.2",
     "gulp-less": "^3.0.2",
     "gulp-load-plugins": "^0.9.0",
-    "gulp-minify-css": "^1.0.0",
     "gulp-minify-html": "^1.0.1",
     "gulp-plumber": "^1.0.0",
     "gulp-print": "^1.1.0",
     "gulp-task-listing": "^1.0.0",
     "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.2"
+    "gulp-useref": "^1.1.1",
+    "gulp-util": "^3.0.2",
+    "yargs": "^3.6.0"
   },
   "dependencies": {}
 }
