--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "angular": "1.4.7",
     "angular-animate": "1.4.7",
-    "angular-bootstrap": "0.14.3",
+    "angular-bootstrap": "0.12.1",
     "angular-ui-router": "0.2.15",
     "angular-scroll": "~0.6.5",
     "bootstrap": "3.3.5",
@@ -34,7 +34,8 @@
     "font-awesome": "~4.3.0",
     "toastr": "~2.0.3",
     "underscore": "~1.7.0",
-    "es5-shim": "~4.1.0"
+    "es5-shim": "~4.1.0",
+    "bootstrap-modal-popover": "https://github.com/scruffles/BootstrapModalPopover.git"
   },
   "resolutions": {
     "angular": "1.4.7"
