--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-less": "^3.0.2",
     "gulp-load-plugins": "^1.0.0",
     "gulp-minify-html": "^1.0.1",
+    "gulp-node-inspector": "^0.1.0",
     "gulp-plumber": "^1.0.0",
     "gulp-print": "^2.0.1",
     "gulp-task-listing": "^1.0.0",
