--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/flyer1/Rainbow",
   "devDependencies": {
+    "cfonts": "0.0.13",
+    "chalk": "^1.1.1",
     "del": "^2.0.2",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^3.1.0",
@@ -35,6 +37,8 @@
     "gulp-uglify": "^1.0.1",
     "gulp-useref": "^2.0.1",
     "gulp-util": "^3.0.2",
+    "run-sequence": "^1.1.4",
+    "wiredep": "^3.0.0-beta",
     "yargs": "^3.6.0"
   },
   "dependencies": {}
