--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-uglify": "^1.0.1",
     "gulp-useref": "^2.0.1",
     "gulp-util": "^3.0.2",
+    "http-server": "^0.8.5",
     "run-sequence": "^1.1.4",
     "wiredep": "^3.0.0-beta",
     "yargs": "^3.6.0"
