--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-util": "^3.0.2",
     "http-server": "^0.8.5",
     "run-sequence": "^1.1.4",
+    "underscore": "^1.8.3",
     "wiredep": "^3.0.0-beta",
     "yargs": "^3.6.0"
   },
