--- a/bower.json
+++ b/bower.json
@@ -28,15 +28,15 @@
     "angular-animate": "1.4.7",
     "angular-sanitize": "1.4.7",
     "angular-ui-router": "0.2.15",
-    "angular-scroll": "~0.6.5",
+    "angular-scroll": "~0.7.3",
     "bootstrap": "3.1.1",
     "moment": "~2.9.0",
     "font-awesome": "~4.3.0",
-    "toastr": "~2.0.3",
     "underscore": "~1.7.0",
     "es5-shim": "~4.1.0"
   },
   "resolutions": {
-    "angular": "1.4.7"
+    "angular": "1.4.7",
+    "angular-scroll": "~0.7.3"
   }
 }
