--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-csso": "^1.0.0",
     "gulp-filter": "^3.0.1",
     "gulp-header": "^1.7.1",
+    "gulp-if": "^2.0.0",
     "gulp-inject": "^3.0.0",
     "gulp-less": "^3.0.2",
     "gulp-load-plugins": "^1.0.0",
@@ -40,7 +41,7 @@
     "gulp-rev-replace": "^0.4.2",
     "gulp-task-listing": "^1.0.0",
     "gulp-uglify": "^1.0.1",
-    "gulp-useref": "^2.0.1",
+    "gulp-useref": "^3.0.1",
     "gulp-util": "^3.0.2",
     "http-server": "^0.8.5",
     "run-sequence": "^1.1.4",
