Created gulp-ftp task, site is now in prod, fixed up message/location data

--- a/package.json
+++ b/package.json
@@ -49,5 +49,7 @@
     "wiredep": "^3.0.0-beta",
     "yargs": "^3.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vinyl-ftp": "^0.4.5"
+  }
 }
