Updated the caching settings such that a new version of index.html is pulled down every time.

--- a/src/client/Web.config
+++ b/src/client/Web.config
@@ -134,4 +134,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <location path="index.html">
+    <system.webServer>
+      <staticContent>
+        <clientCache cacheControlMode="DisableCache" />
+      </staticContent>
+    </system.webServer>
+  </location>
 </configuration>
